updated width for device name in web terminal

--- a/Altair_Web_Terminal/app.html
+++ b/Altair_Web_Terminal/app.html
@@ -354,7 +354,7 @@
 <body onload="initTerminal();">
   <div>
     Enter your IoT Central device name
-    <input type="text" id="displayName" value="device name">
+    <input type="text" id="displayName" value="device name" style="width: 400px;">
     <input type="button" value="Connect" onclick="connect();">
   </div>
   <br />
